--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,10 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script src="socket.io.js"></script>
+        <script src="angular-slider.min.js"></script>
         <script src="scripts/app.js"></script>
+        <script src="scripts/models.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <!-- endbuild -->
